@@ -12,10 +12,3 @@ CGUIDialogPlayerControls::~CGUIDialogPlayerControls(void)
 {
 }
 
-void CGUIDialogPlayerControls::Render()
-{
-  if (!g_application.IsPlaying() || m_gWindowManager.GetActiveWindow() == WINDOW_FULLSCREEN_VIDEO)
-    Close(true);
-  else
-    CGUIDialog::Render();
-}
